2024-01-31T01:03:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7719648575 # 72
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 4 30
* notice: prev accum: outdated-unq outdated-all / unq all: 735 1160 / 752 1189
* notice: next accum: outdated-unq outdated-all / unq all: 735 1160 / 752 1190
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-30]

2024-01-30T08:17:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7708172635 # 70
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
* notice: last 14d: unq all: 4 29
* notice: prev accum: outdated-unq outdated-all / unq all: 735 1160 / 751 1188
* notice: next accum: outdated-unq outdated-all / unq all: 735 1160 / 752 1189
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-30]

2024-01-30T01:03:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7704729908 # 69
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
* notice: last 14d: unq all: 4 28
* notice: prev accum: outdated-unq outdated-all / unq all: 735 1160 / 751 1187
* notice: next accum: outdated-unq outdated-all / unq all: 735 1160 / 751 1188
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-29T08:17:56Z: