@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-31T01:03:58Z",
+  "timestamp" : "2024-01-31T08:17:24Z",
   "count_outdated" : 1160,
   "uniques_outdated" : 735,
-  "count" : 1190,
-  "uniques" : 752,
+  "count" : 1191,
+  "uniques" : 753,
   "clones" : [
     {
       "timestamp": "2024-01-17T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
